-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.5.0
-
None
-
5c04b408605d27377fc9d3991527b15aee4d8797, 75ebcfad4bffd31e9cd10c0c2f57b25063acd567
Steps to re-produce:
1) Open/create a project (something with SUBDIRS).
2) Click on a folder and select "New subproject..."
Expected behaviour:
New project wizard does not prompt for build configurations (ie. Desktop Release/Debug).
Actual behaviour:
New project wizard prompts for build configurations but then ignores this, since this project is being added to an existing project.
- replaces
-
QTCREATORBUG-3066 Wizards' Qt Versions page doesn't make sense for subprojects
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-7426 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 26177,6 | Don't show the target setup page on adding a subproject | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |