Don't show the target setup page on adding a subproject

Task-number: QTCREATORBUG-7426

Change-Id: Idfbaae7ac6dd67b4d85db8c30088f4c1f5d9986b
Reviewed-by: Tobias Hunger <tobias.hunger@nokia.com>