src/plugins/qt4projectmanager/wizards/targetsetuppage.h
@@ -81,7 +81,6 @@ public:
     bool setupProject(Qt4ProjectManager::Qt4Project *project);
     bool isProfileSelected(Core::Id id) const;
     void setProfileSelected(Core::Id id, bool selected);
-    bool isQtPlatformSelected(const QString &type) const;
     QList<Core::Id> selectedProfiles() const;
     void setProFilePath(const QString &dir);
 
